--- a/aula_05/get/exer01.html
+++ b/aula_05/get/exer01.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <form action="form01.php" method="get">
-        <label></label>
-        <label></label>
-        <label></label>
-        <label></label>
+        <p>Olá, estudante! Digite seu nome: <input type="text" name="estnome" id=""> </p>
+        <p>Digite sua primeira nota: <input type="number" name="nota1" id=""> </p>
+        <p>Digite sua segunda nota: <input type="number" name="nota2" id=""> </p>
+        <p>Digite sua terceira nota: <input type="number" name="nota3" id=""> </p>
         <input type="submit" value="Enviar">
     </form>
 </body>
