--- a/aula_05/get/exer02.html
+++ b/aula_05/get/exer02.html
@@ -6,6 +6,12 @@
     <title>Exercício 2 - GET</title>
 </head>
 <body>
-    
+    <form action="form02.php" method="get">
+        <p>Olá!</p>
+        <p>Digite o primeiro número: <input type="number" name="num1" id=""> </p>
+        <p>Digite o segundo número: <input type="number" name="num2" id=""> </p>
+        <p>Digite o terceiro número: <input type="number" name="num3" id=""> </p>
+        <input type="submit" value="Enviar">
+    </form>
 </body>
 </html>
