--- a/aula_05/get/exer02.html
+++ b/aula_05/get/exer02.html
@@ -7,10 +7,14 @@
 </head>
 <body>
     <form action="form02.php" method="get">
-        <p>Olá!</p>
-        <p>Digite o primeiro número: <input type="number" name="num1" id=""> </p>
-        <p>Digite o segundo número: <input type="number" name="num2" id=""> </p>
-        <p>Digite o terceiro número: <input type="number" name="num3" id=""> </p>
+        <label>Olá!</label>
+        <br>
+        <label>Digite o primeiro número: <input type="number" name="num1" id="" required name="num1"> </label>
+        <br>
+        <label>Digite o segundo número: <input type="number" name="num2" id="" required name="num2"> </label>
+        <br>
+        <label>Digite o terceiro número: <input type="number" name="num3" id="" required name="num3"> </label>
+        <br>
         <input type="submit" value="Enviar">
     </form>
 </body>
